Controlador Symfony para API y vista de carrito

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,9 +7,13 @@
     <title>frontend gitanaco 🔥🔥🔥🔥</title>
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <!-- Work Sans Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-background-light dark:bg-background-dark text-deep-green dark:text-gray-200 font-display antialiased min-h-screen flex flex-col transition-colors duration-300">
+    <div id="root" class="flex-grow flex flex-col w-full"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
